Use Java 8 compatible test file reads